syntax = "proto3";

package inspire.middleware.coupon.app.cashcontrol.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/inspire/middleware/v1/coupon/app/cashcontrol";

import "basetypes/v1/conds.proto";
import "basetypes/inspire/v1/enums.proto";

message CashControlReq {
  optional uint32 ID = 10;
  optional string AppID = 11;
  optional string EntID = 20;
  optional string CouponID = 30;
  optional basetypes.inspire.v1.ControlType ControlType = 40;
  optional string Value = 50;
}

message CashControl {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 20;
  // @inject_tag: sql:"app_id"
  string AppID = 21;
  // @inject_tag: sql:"coupon_id"
  string CouponID = 30;
  // @inject_tag: sql:"coupon_name"
  string CouponName = 40;
  // @inject_tag: sql:"coupon_type"
  string CouponTypeStr = 50;
  basetypes.inspire.v1.CouponType CouponType = 60;
  // @inject_tag: sql:"coupon_denomination"
  string CouponDenomination = 70;
  // @inject_tag: sql:"control_type"
  string ControlTypeStr = 80;
  basetypes.inspire.v1.ControlType ControlType = 90;
  // @inject_tag: sql:"value"
  string Value = 100;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 1000;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 1010;
}

message Conds {
  optional basetypes.v1.StringVal AppID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal CouponID = 20;
  optional basetypes.v1.StringSliceVal CouponIDs = 30;
  optional basetypes.v1.Uint32Val ControlType = 40;
}

